## AliceVision
## Samples

# Samples PROPERTY FOLDER
set(FOLDER_SAMPLES "Samples")

# add_subdirectory(accv12Demo)
# add_subdirectory(featuresAKAZEDemo)
add_subdirectory(featuresRepeatability)
# add_subdirectory(imageData)
add_subdirectory(imageDescriberMatches)
add_subdirectory(kvldFilter)
add_subdirectory(robustEssential)
add_subdirectory(robustEssentialBA)
add_subdirectory(robustEssentialSpherical)
add_subdirectory(robustFundamental)
add_subdirectory(robustFundamentalF10)
add_subdirectory(robustFundamentalGuided)
add_subdirectory(robustHomography)
add_subdirectory(robustHomographyGrowing)
add_subdirectory(robustHomographyGuided)
add_subdirectory(sensorWidthDatabase)
add_subdirectory(siftPutativeMatches)
add_subdirectory(texturing)
add_subdirectory(undistoBrown)
