ADD_SUBDIRECTORY(delaunaycut)
ADD_SUBDIRECTORY(CUDAInterfaces)
ADD_SUBDIRECTORY(eig33)
ADD_SUBDIRECTORY(filter)
ADD_SUBDIRECTORY(hallucinations)
ADD_SUBDIRECTORY(largeScale)
ADD_SUBDIRECTORY(mesh)
ADD_SUBDIRECTORY(output3D)
ADD_SUBDIRECTORY(planeSweeping)
ADD_SUBDIRECTORY(prematching)
ADD_SUBDIRECTORY(rply)
ADD_SUBDIRECTORY(structures)
